# GraphicEditorUp

./: CMakeLists.txt  README.md  main.cpp
BasicAlgorithms/: FileManager.cpp  FileManager.h
Design/: DesignConstants.h  MainWindow.cpp  MainWindow.h
GraphicAlgorithms/: BasicAlgorithms.cpp  BasicAlgorithms.h  ColorSpace.h  ColorSpacesInterpreter.cpp  ColorSpacesInterpreter.h  Disiring.cpp  Disiring.h  Filtrator.cpp  Filtrator.h  GammaChanger.cpp  GammaChanger.h  GistagramChanger.cpp  GistagramChanger.h  JpegInterpreter.cpp  JpegInterpreter.h  LineDrawer.cpp  LineDrawer.h  PngInterpreter.cpp  PngInterpreter.h  Scaler.cpp  Scaler.h  UltimateColor.cpp  UltimateColor.h
